Improve fallback messages when Nexus V3 is unavailable

--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -2,48 +2,8 @@
   "short_term": [
     {
       "role": "user",
-      "content": "Aurora bridge offline; synthesized draft for: aurora i need you to create me a ai-native os",
-      "timestamp": "2026-01-19T10:51:22.871974"
-    },
-    {
-      "role": "user",
-      "content": "aurora i need you to create AI-native os",
-      "timestamp": "2026-01-19T10:54:57.168464"
-    },
-    {
-      "role": "user",
-      "content": "Request queued: aurora i need you to create AI-native os. Nexus V3 is processing with 300 workers.",
-      "timestamp": "2026-01-19T10:55:01.026212"
-    },
-    {
-      "role": "user",
-      "content": "aurora i need you to create a Ai-native os",
-      "timestamp": "2026-01-19T10:57:21.084202"
-    },
-    {
-      "role": "user",
-      "content": "Request queued: aurora i need you to create a Ai-native os. Nexus V3 is processing with 300 workers.",
-      "timestamp": "2026-01-19T10:57:24.377705"
-    },
-    {
-      "role": "user",
-      "content": "aurora i need you to create a Ai-native os",
-      "timestamp": "2026-01-19T11:15:17.076333"
-    },
-    {
-      "role": "user",
-      "content": "Request queued: aurora i need you to create a Ai-native os. Nexus V3 is processing with 300 workers.",
-      "timestamp": "2026-01-19T11:15:18.865850"
-    },
-    {
-      "role": "user",
-      "content": "create a Ai-native os ",
-      "timestamp": "2026-01-19T11:25:38.540958"
-    },
-    {
-      "role": "user",
-      "content": "Request queued: create a Ai-native os . Nexus V3 is processing with 300 workers.",
-      "timestamp": "2026-01-19T11:25:40.291183"
+      "content": "Request queued: aurora i want you to generate a Ai-native os. Nexus V3 is processing with 300 workers.",
+      "timestamp": "2026-01-19T11:28:34.695084"
     }
   ],
   "mid_term": [
@@ -81,6 +41,13 @@
       "first_message": "2026-01-10T05:13:56.473495",
       "last_message": "2026-01-19T10:51:19.057597",
       "compressed_at": "2026-01-19T10:51:19.067910"
+    },
+    {
+      "summary": "Compressed 10 messages",
+      "message_count": 10,
+      "first_message": "2026-01-19T10:51:22.871974",
+      "last_message": "2026-01-19T11:28:32.912411",
+      "compressed_at": "2026-01-19T11:28:32.925811"
     }
   ],
   "long_term": [
@@ -2152,6 +2119,33 @@
         "type": "shortterm"
       },
       "stored_at": "2026-01-19T11:25:40.321510"
+    },
+    "memory_91004a43-d714-4503-b833-895fa5365d1e": {
+      "value": {
+        "text": "aurora i want you to generate a Ai-native os",
+        "meta": {
+          "session_id": "chat-1768840098498",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2026-01-19T11:28:33.030742",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T11:28:33.030766"
+    },
+    "memory_e2d367ef-10d4-461c-bfa5-651dc0f3bc54": {
+      "value": {
+        "text": "Request queued: aurora i want you to generate a Ai-native os. Nexus V3 is processing with 300 workers.",
+        "meta": {
+          "session_id": "chat-1768840098498",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2026-01-19T11:28:34.726924",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T11:28:34.726950"
     }
   },
   "events": [
@@ -3664,6 +3658,26 @@
         "longterm": false
       },
       "timestamp": "2026-01-19T11:25:40.344908"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "91004a43-d714-4503-b833-895fa5365d1e",
+        "text_length": 44,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T11:28:33.057008"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "e2d367ef-10d4-461c-bfa5-651dc0f3bc54",
+        "text_length": 102,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T11:28:34.749908"
     }
   ],
   "semantic_index": {
@@ -3675,5 +3689,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2026-01-19T11:25:40.346347"
+  "last_updated": "2026-01-19T11:28:34.750677"
 }
