--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -4,6 +4,16 @@
       "role": "user",
       "content": "Request queued: aurora i want you to generate a Ai-native os. Nexus V3 is processing with 300 workers.",
       "timestamp": "2026-01-19T11:28:34.695084"
+    },
+    {
+      "role": "user",
+      "content": "create a ai-native os",
+      "timestamp": "2026-01-19T12:22:22.123440"
+    },
+    {
+      "role": "user",
+      "content": "Aurora Nexus V3 is processing your request: \"create a ai-native os\"\n\nI'm analyzing your requirements and preparing to generate the appropriate code/solution.\n\n**Processing with:**\n- 300 Autonomous Workers\n- 188 Knowledge Tiers\n- 66 Advanced Execution Methods (AEMs)\n- 550 Specialized Modules\n\nYour request is being handled by our code synthesis tier. The solution will leverage our full knowledge base to deliver production-ready results.",
+      "timestamp": "2026-01-19T12:22:22.408034"
     }
   ],
   "mid_term": [
@@ -2146,6 +2156,33 @@
         "type": "shortterm"
       },
       "stored_at": "2026-01-19T11:28:34.726950"
+    },
+    "memory_3a0ada11-ce7f-46b0-ac32-c3d6f9c71331": {
+      "value": {
+        "text": "create a ai-native os",
+        "meta": {
+          "session_id": "chat-1768843318518",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2026-01-19T12:22:22.201954",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T12:22:22.201979"
+    },
+    "memory_461fce7d-74f5-4579-8c43-d28b7e14c759": {
+      "value": {
+        "text": "Aurora Nexus V3 is processing your request: \"create a ai-native os\"\n\nI'm analyzing your requirements and preparing to generate the appropriate code/solution.\n\n**Processing with:**\n- 300 Autonomous Workers\n- 188 Knowledge Tiers\n- 66 Advanced Execution Methods (AEMs)\n- 550 Specialized Modules\n\nYour request is being handled by our code synthesis tier. The solution will leverage our full knowledge base to deliver production-ready results.",
+        "meta": {
+          "session_id": "chat-1768843318518",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2026-01-19T12:22:22.454714",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T12:22:22.454752"
     }
   },
   "events": [
@@ -3678,6 +3715,26 @@
         "longterm": false
       },
       "timestamp": "2026-01-19T11:28:34.749908"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "3a0ada11-ce7f-46b0-ac32-c3d6f9c71331",
+        "text_length": 21,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T12:22:22.236336"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "461fce7d-74f5-4579-8c43-d28b7e14c759",
+        "text_length": 438,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T12:22:22.488427"
     }
   ],
   "semantic_index": {
@@ -3689,5 +3746,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2026-01-19T11:28:34.750677"
+  "last_updated": "2026-01-19T12:22:22.489257"
 }
