Fix: Disable issue detector to prevent false positive spam and loops

--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -14,6 +14,16 @@
       "role": "user",
       "content": "Aurora Nexus V3 is processing your request: \"create a ai-native os\"\n\nI'm analyzing your requirements and preparing to generate the appropriate code/solution.\n\n**Processing with:**\n- 300 Autonomous Workers\n- 188 Knowledge Tiers\n- 66 Advanced Execution Methods (AEMs)\n- 550 Specialized Modules\n\nYour request is being handled by our code synthesis tier. The solution will leverage our full knowledge base to deliver production-ready results.",
       "timestamp": "2026-01-19T12:22:22.408034"
+    },
+    {
+      "role": "user",
+      "content": "create an Ai-native os ",
+      "timestamp": "2026-01-19T12:42:35.856687"
+    },
+    {
+      "role": "user",
+      "content": "Aurora Nexus V3 is processing your request: \"create an Ai-native os \"\n\nI'm analyzing your requirements and preparing to generate the appropriate code/solution.\n\n**Processing with:**\n- 300 Autonomous Workers\n- 188 Knowledge Tiers\n- 66 Advanced Execution Methods (AEMs)\n- 550 Specialized Modules\n\nYour request is being handled by our code synthesis tier.",
+      "timestamp": "2026-01-19T12:42:36.610865"
     }
   ],
   "mid_term": [
@@ -2183,6 +2193,33 @@
         "type": "shortterm"
       },
       "stored_at": "2026-01-19T12:22:22.454752"
+    },
+    "memory_8db27cb2-bdb6-418b-b32c-307aaed9e091": {
+      "value": {
+        "text": "create an Ai-native os ",
+        "meta": {
+          "session_id": "chat-1768844540343",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2026-01-19T12:42:35.921956",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T12:42:35.921980"
+    },
+    "memory_a8c715f5-1de9-4d53-8376-d41adb81a860": {
+      "value": {
+        "text": "Aurora Nexus V3 is processing your request: \"create an Ai-native os \"\n\nI'm analyzing your requirements and preparing to generate the appropriate code/solution.\n\n**Processing with:**\n- 300 Autonomous Workers\n- 188 Knowledge Tiers\n- 66 Advanced Execution Methods (AEMs)\n- 550 Specialized Modules\n\nYour request is being handled by our code synthesis tier.",
+        "meta": {
+          "session_id": "chat-1768844540343",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2026-01-19T12:42:36.659886",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T12:42:36.659925"
     }
   },
   "events": [
@@ -3735,6 +3772,26 @@
         "longterm": false
       },
       "timestamp": "2026-01-19T12:22:22.488427"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "8db27cb2-bdb6-418b-b32c-307aaed9e091",
+        "text_length": 23,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T12:42:35.960047"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "a8c715f5-1de9-4d53-8376-d41adb81a860",
+        "text_length": 352,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T12:42:36.701442"
     }
   ],
   "semantic_index": {
@@ -3746,5 +3803,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2026-01-19T12:22:22.489257"
+  "last_updated": "2026-01-19T12:42:36.702635"
 }
